@@ -8,6 +8,7 @@ class Sys::Time {
   use Sys::Time::Timezone;
   use Sys::Time::Itimerval;
   use Sys::Time::Timespec;
+  use Sys::Time::Utimbuf;
   
   native static method time : long ();
   
@@ -32,4 +33,8 @@ class Sys::Time {
   native static method clock_nanosleep : int ($clockid : int, $flags : int, $request : Sys::Time::Timespec, $remain : Sys::Time::Timespec);
   
   native static method nanosleep : int ($rqtp : Sys::Time::Timespec, $rmtp : Sys::Time::Timespec);
+  
+  native static method utime : int ($filename : string, $times : Sys::Time::Utimbuf);
+  
+  native static method utimes : int ($filename : string, $times : Sys::Time::Timeval[]);
 }
