@@ -5,6 +5,7 @@ class TestCase::Sys::Time {
   use Sys::Time::Timespec;
   use Sys::Time::Constant as TIME;
   use Sys::Time::Itimerval;
+  use Sys::Time::Utimbuf;
   
   static method new_tm : int () {
     my $tm = Sys::Time::Tm->new;
@@ -221,4 +222,54 @@ class TestCase::Sys::Time {
     
     return 1;
   }
+  
+  static method utime : int ($test_dir : string) {
+    
+    my $file = "$test_dir/ftest/utime.txt";
+    
+    my $utimbuf = Sys::Time::Utimbuf->new;
+    
+    my $time = Sys::Time->time;
+    
+    my $actime = $utimbuf->set_actime($time);
+    my $modtime = $utimbuf->set_modtime($time);
+    
+    my $status = Sys::Time->utime($file, $utimbuf);
+    
+    unless ($status == 0) {
+      return 0;
+    }
+    
+    return 1;
+  }
+  
+  static method utimes : int ($test_dir : string) {
+    
+    if (Sys::OS->is_windows) {
+      eval { Sys::Time->utimes(undef, undef); }
+      unless ($@ && eval_error_id is_error Error::NotSupported) {
+        return 0;
+      }
+    }
+    else {
+      my $file = "$test_dir/ftest/utime.txt";
+      
+      my $times0 = Sys::Time::Timeval->new;
+      Sys::Time->gettimeofday($times0, undef);
+      
+      my $times1 = Sys::Time::Timeval->new;
+      Sys::Time->gettimeofday($times1, undef);
+      
+      my $times = [$times0, $times1];
+      
+      my $status = Sys::Time->utimes($file, $times);
+      
+      unless ($status == 0) {
+        return 0;
+      }
+    }
+    
+    return 1;
+  }
+  
 }
